--- a/gotutorial/.vscode/launch.json
+++ b/gotutorial/.vscode/launch.json
@@ -8,8 +8,9 @@
             "name": "Launch Package",
             "type": "go",
             "request": "launch",
-            "mode": "auto",
-            "program": "${fileDirname}"
+            "mode": "debug",
+            "program": "${workspaceRoot}",
+            "args": ["-mode", "rest", "-port", "4000"]
         }
     ]
 }
